# rust-aws-git-lfs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  docker-compose.yml
.github/workflows/: e2e.yml  release.yml
cloudformation/: template.yaml
data/: batch-download.json  batch-upload.json  verify.json
docs/: for-developers.md  for-users.md
docs/design/: api-design.md  architecture.md  aws-architecture.md  db-design.md
docs/i18n/ja/: README.md  for-developers.md  for-users.md
scripts/: upload-artifacts.sh
src/: authorizer.rs  cloudfront_signer.rs  http_handler.rs  main.rs
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: e2e.rs
