[package]
name = "rust-aws-lfs"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "1.0.0"
tokio = { version = "1", features = ["macros"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
