[package]
name = "rust-aws-lfs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-aws-lfs"
path = "src/main.rs"

[[bin]]
name = "rust-aws-lfs-authorizer"
path = "src/authorizer.rs"

[dependencies]
lambda_http = "1.0.0"
lambda_runtime = "1.2.1"
tokio = { version = "1", features = ["macros"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rsa     = { version = "0.9", features = ["sha1", "pem"] }
sha1    = "0.10"
base64  = "0.22"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
